--- a/app/src/main/res/layout/secondlayout.xml
+++ b/app/src/main/res/layout/secondlayout.xml
@@ -16,8 +16,7 @@
         >
 
         <Button
-            android:text="First
-            "
+            android:text="FirstButton"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:id="@+id/button1"
